tests/rosetta/transpiler/CPP/file-input-output-1.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp:20:181: warning: multi-character character constant [-Wmultichar]
   20 |     else if(val.type() == typeid(std::vector<int64_t>)) { const auto& v = std::any_cast<const std::vector<int64_t>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                     ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp:21:209: warning: multi-character character constant [-Wmultichar]
   21 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                 ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp:21:295: warning: multi-character character constant [-Wmultichar]
   21 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp:22:189: warning: multi-character character constant [-Wmultichar]
   22 |     else if(val.type() == typeid(std::vector<std::string>)) { const auto& v = std::any_cast<const std::vector<std::string>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                             ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp:23:183: warning: multi-character character constant [-Wmultichar]
   23 |     else if(val.type() == typeid(std::vector<std::any>)) { const auto& v = std::any_cast<const std::vector<std::any>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; any_to_stream(os, v[i]); } os << ']'; }
      |                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp:24:215: warning: multi-character character constant [-Wmultichar]
   24 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp:24:251: warning: multi-character character constant [-Wmultichar]
   24 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp: In function ‘int main()’:
/workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp:52:61: error: conversion from ‘std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::mapped_type’ {aka ‘std::__cxx11::basic_string<char>’} to non-scalar type ‘std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’ requested
   52 |     std::map<std::string, std::string> data = fs["input.txt"];
      |                                                             ^
/workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp:53:37: error: no match for ‘operator=’ (operand types are ‘std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::mapped_type’ {aka ‘std::__cxx11::basic_string<char>’} and ‘std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’)
   53 |     fs[std::string("output.txt")] = data;
      |                                     ^~~~
In file included from /usr/include/c++/13/string:54,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp:2:
/usr/include/c++/13/bits/basic_string.h:936:8: note: candidate: ‘template<class _Tp> constexpr std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::_If_sv<_Tp, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  936 |        operator=(const _Tp& __svt)
      |        ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:936:8: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/13/bits/move.h:37,
                 from /usr/include/c++/13/bits/exception_ptr.h:41,
                 from /usr/include/c++/13/exception:164,
                 from /usr/include/c++/13/ios:41:
/usr/include/c++/13/type_traits: In substitution of ‘template<bool _Cond, class _Tp> using std::enable_if_t = typename std::enable_if::type [with bool _Cond = false; _Tp = std::__cxx11::basic_string<char>&]’:
/usr/include/c++/13/bits/basic_string.h:144:8:   required by substitution of ‘template<class _CharT, class _Traits, class _Alloc> template<class _Tp, class _Res> using std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::_If_sv = std::enable_if_t<std::__and_<std::is_convertible<const _Tp&, std::basic_string_view<_CharT, _Traits> >, std::__not_<std::is_convertible<const _Tp*, const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>*> >, std::__not_<std::is_convertible<const _Tp&, const _CharT*> > >::value, _Res> [with _Tp = std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >; _Res = std::__cxx11::basic_string<char>&; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
/usr/include/c++/13/bits/basic_string.h:936:8:   required by substitution of ‘template<class _Tp> constexpr std::__cxx11::basic_string<char>::_If_sv<_Tp, std::__cxx11::basic_string<char>&> std::__cxx11::basic_string<char>::operator=(const _Tp&) [with _Tp = std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >]’
/workspace/mochi/tests/rosetta/transpiler/CPP/file-input-output-1.cpp:53:37:   required from here
/usr/include/c++/13/type_traits:2610:11: error: no type named ‘type’ in ‘struct std::enable_if<false, std::__cxx11::basic_string<char>&>’
 2610 |     using enable_if_t = typename enable_if<_Cond, _Tp>::type;
      |           ^~~~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:812:7: note: candidate: ‘constexpr std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  812 |       operator=(const basic_string& __str)
      |       ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:812:37: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’ to ‘const std::__cxx11::basic_string<char>&’
  812 |       operator=(const basic_string& __str)
      |                 ~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:823:7: note: candidate: ‘constexpr std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  823 |       operator=(const _CharT* __s)
      |       ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:823:31: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’ to ‘const char*’
  823 |       operator=(const _CharT* __s)
      |                 ~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/basic_string.h:835:7: note: candidate: ‘constexpr std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  835 |       operator=(_CharT __c)
      |       ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:835:24: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’ to ‘char’
  835 |       operator=(_CharT __c)
      |                 ~~~~~~~^~~
/usr/include/c++/13/bits/basic_string.h:853:7: note: candidate: ‘constexpr std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  853 |       operator=(basic_string&& __str)
      |       ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:853:32: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’ to ‘std::__cxx11::basic_string<char>&&’
  853 |       operator=(basic_string&& __str)
      |                 ~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:921:7: note: candidate: ‘constexpr std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(std::initializer_list<_Tp>) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  921 |       operator=(initializer_list<_CharT> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:921:42: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’ to ‘std::initializer_list<char>’
  921 |       operator=(initializer_list<_CharT> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~^~~
